# SAFER

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
Projeto/Projeto/: asgi.py  settings.py  urls.py
Projeto/SAFERapp/: admin.py  apps.py  consumers.py  models.py  routing.py  signals.py  views.py
Projeto/SAFERapp/assets/css/: main.css
Projeto/SAFERapp/beans/: Enums.py  Forms.py  Imagens.py  Informativos.py  Observacoes.py  Ocorrencia.py  Post.py  Resgate.py  Usuario.py
Projeto/SAFERapp/migrations/: 0001_initial.py  0002_alter_ocorrencia_datahora.py  0002_alter_post_id_autor_alter_ocorrencia_autor_and_more.py  0002_alter_usuario_id.py  0003_customuser_groups_customuser_user_permissions.py  0004_ocorrencia_celular_autor_ocorrencia_nome_animal_and_more.py
Projeto/SAFERapp/templates/: Cadastro.html  DetalhesUsuario.html  Form.html  TelaAtualizarDetalhesChamado.html  TelaChamados.html  TelaDetalhesChamado.html  TelaGerenciarUsuarios.html  TelaInformativos.html  TelaObservacoes.html  TelaPerfil.html  TelaRelatorio.html  TelaUsuario.html  TopTemplate.html  criarInformativos.html  gerenciarInformativos.html  home.html  index.html
Projeto/SAFERapp/tests/: test_aceitar_ocorrencia.py  test_acessar_aceitas.py  test_acessar_ocorrencia.py  test_criar_ocorrencia.py  test_excluir_conta.py  test_models.py  test_promocao_usuario.py  test_recuperar_senha.py  tests_acessar_ocorrencias.py  tests_gerar_relatorios.py  tests_informativos.py  tests_ocorrencia.py  tests_trocar_senha.py
Projeto/Testes/: tests_informativos.py  tests_ocorrencia.py
Projeto/scripts/: orm_scripts.py  scripts.py
SAFER/: pyvenv.cfg
SAFER/Scripts/: activate  activate.bat
safer/: manage.py
safer/safer/: asgi.py  settings.py  urls.py  wsgi.py
(+15 files in other folders)
