[tool.poetry]
name = "Projeto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
django = "5.1.4"
django-allauth = "65.3.0"
django-crispy-forms = "2.3"
django-geojson = "4.1.0"
mysqlclient = "2.2.6"
pillow = "11.0.0"
sqlparse = "0.5.2"
tzdata = "2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
